# cudaFiles

./: .gitignore  CMakeLists.txt  README.md  build-rel.bat  build.bat  config.bat  run-rel.bat  run.bat
src/: CMakeLists.txt  deviceQuery.cu  gradientImg.cu  grayscale.cu  matrixMult.cu
src/sharedMemory/: 1_SharedMem_DotProduct.cu  2_SharedMem_Vizualization.cu
src/utils/: timer.h  utils.cuh
